--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -3,7 +3,7 @@
 	box-shadow: none;
 }
 window {
-	font-family: "JetBrains Mono";
+	font-family: "MxPlus IBM VGA 9x16";
 	background-color: rgba(128,0,0,0.7);
 }
 #entry{
