pushing lots of changes to the repo

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -125,7 +125,7 @@ button {
     border-top: 2px solid #ce2029;
 }
 #battery {
-    margin: 0px 0px 0px 10px;
+    margin: 0px 10px 0px 10px;
 }
 #battery.warning {
     color: rgba(255, 210, 4, 1);
@@ -143,6 +143,10 @@ button {
 }
 #custom-power {
     margin : 0px 10px 0px 10px;
+}
+#custom-album-art {
+    font-size : 20px;
+    background-image : url("/tmp/kunst.png");
 }
 @keyframes blink {
     to {
